--- a/platform/Languages/ru.csv
+++ b/platform/Languages/ru.csv
@@ -1,7 +1,11 @@
 "Welcome!";"Добро пожаловать!"
 "Orders";"Заказы"
+"Wrong login or password";"Неверный логин или пароль"
+"Wrong email or password";"Неверный электронный адрес или пароль"
+"You are already logged.";"Вы уже авторизованны."
 "Remember me";"Запомнить меня"
 "Login";"Логин"
+"E-mail";"Электронный адрес"
 "Password";"Пароль"
 "Enter";"Войти"
 "Login page";"Вход в систему"
