--- a/trunk/application/i18n/ru.csv
+++ b/trunk/application/i18n/ru.csv
@@ -1,3 +1,4 @@
+"Control panel";"Панель управления"
 "Welcome!";"Добро пожаловать!"
 "Orders";"Заказы"
 "Wrong login or password";"Неверный логин или пароль"
