--- a/trunk/application/i18n/ru.csv
+++ b/trunk/application/i18n/ru.csv
@@ -10,4 +10,15 @@
 "Password";"Пароль"
 "Enter";"Войти"
 "Login page";"Вход в систему"
+"Save";"Сохранить"
+"Personal blog";"Персональный блог"
+"Collaborative blog (community)";"Коллективный блог (сообщество)"
+"Title";"Заголовок"
+"Description";"Описание"
+"Type";"Тип"
+"Create new blog";"Создание нового блога"
+"Create blog";"Создание блога"
+"Blogs";"Блоги"
+"Blog";"Блог"
+"Manage blogs";"Управление блогами"
 "Value is required and can't be empty";"Значение не должно быть пустым"
