--- a/trunk/application/i18n/ru.csv
+++ b/trunk/application/i18n/ru.csv
@@ -1,4 +1,5 @@
 "Control panel";"Панель управления"
+"Dashboard";"Рабочая панель"
 "Welcome!";"Добро пожаловать!"
 "Orders";"Заказы"
 "Wrong login or password";"Неверный логин или пароль"
