--- a/application/i18n/ru.csv
+++ b/application/i18n/ru.csv
@@ -23,3 +23,5 @@
 "Blog";"Блог"
 "Manage blogs";"Управление блогами"
 "Value is required and can't be empty";"Значение не должно быть пустым"
+"English";"Английский"
+"Russian";"Русский"
