--- a/trunk/application/i18n/ru.csv
+++ b/trunk/application/i18n/ru.csv
@@ -17,7 +17,7 @@
 "Title";"Заголовок"
 "Description";"Описание"
 "Type";"Тип"
-"Create new blog";"Создание нового блога"
+"Create new blog";"Создай новый блог"
 "Create blog";"Создание блога"
 "Blogs";"Блоги"
 "Blog";"Блог"
