--- a/trunk/application/i18n/ru.csv
+++ b/trunk/application/i18n/ru.csv
@@ -25,3 +25,4 @@
 "Value is required and can't be empty";"Значение не должно быть пустым"
 "English";"Английский"
 "Russian";"Русский"
+"Admin blogs";"Уравление блогами"
