--- a/application/i18n/ru.csv
+++ b/application/i18n/ru.csv
@@ -26,3 +26,7 @@
 "English";"Английский"
 "Russian";"Русский"
 "Admin blogs";"Уравление блогами"
+"Created";"Создано"
+"Edit";"Редактировать"
+"Delete";"Удалить"
+"Actions";"Действия"
