--- a/trunk/application/i18n/ru.csv
+++ b/trunk/application/i18n/ru.csv
@@ -30,3 +30,5 @@
 "Edit";"Редактировать"
 "Delete";"Удалить"
 "Actions";"Действия"
+"Fancy url";"Псевдоним для URL-адреса"
+"No blogs here";"Не заведенно ещё ни одного блога"
