--- a/application/i18n/ru.csv
+++ b/application/i18n/ru.csv
@@ -31,4 +31,4 @@
 "Delete";"Удалить"
 "Actions";"Действия"
 "Fancy url";"Псевдоним для URL-адреса"
-"No blogs here";"Не заведенно ещё ни одного блога"
+"No blogs here";"Не заведено ещё ни одного блога"
