--- a/trunk/application/i18n/ru.csv
+++ b/trunk/application/i18n/ru.csv
@@ -32,3 +32,16 @@
 "Actions";"Действия"
 "Fancy url";"Псевдоним для URL-адреса"
 "No blogs here";"Не заведено ещё ни одного блога"
+"available";"доступно"
+"unavailable";"недоступно"
+"Operating system";"Операционная система"
+"Zend Framework version";"Версия Zend Framework"
+"Database adapter";"Адаптер базы данных"
+"Database server version";"Версия сервера базы данных"
+"Safe mode";"Безопасный режим"
+"Free disk space";"Свободно на диске"
+"Disable functions";"Отключенные функции PHP"
+"Image adapter component";"Работа и изображениями"
+"Version";"версия"
+"Memory limit";"Ограничение ОЗУ"
+"Welcome";"Привет"
