--- a/application/i18n/ru.csv
+++ b/application/i18n/ru.csv
@@ -45,3 +45,6 @@
 "Version";"версия"
 "Memory limit";"Ограничение ОЗУ"
 "Welcome";"Привет"
+"Settings";"Настройки"
+"Log Out";"Выйти"
+"Go to homepage";"Перейти на сайт"
