--- a/application/i18n/ru.csv
+++ b/application/i18n/ru.csv
@@ -48,3 +48,9 @@
 "Settings";"Настройки"
 "Log Out";"Выйти"
 "Go to homepage";"Перейти на сайт"
+"Edit blog";"Редактирование блога"
+"Changes for blog successfully saved";"Изменения информации блога успешно сохранено"
+"New blog successfully created";"Новый блог создан"
+"Error editing blog";"Ошибка при удалении блога"
+"Blog deleted successfully";"Блог удалён"
+"Create, edit, delete posts. Manage communities.";"Создание, редактирование, удаление постов. Управление сообществами."
