--- a/application/i18n/ru.csv
+++ b/application/i18n/ru.csv
@@ -54,3 +54,5 @@
 "Error editing blog";"Ошибка при удалении блога"
 "Blog deleted successfully";"Блог удалён"
 "Create, edit, delete posts. Manage communities.";"Создание, редактирование, удаление постов. Управление сообществами."
+"Next";"Следующие"
+"Prev";"Предыдущие"
