--- a/trunk/application/i18n/ru.csv
+++ b/trunk/application/i18n/ru.csv
@@ -54,5 +54,6 @@
 "Error editing blog";"Ошибка при удалении блога"
 "Blog deleted successfully";"Блог удалён"
 "Create, edit, delete posts. Manage communities.";"Создание, редактирование, удаление постов. Управление сообществами."
+"Sort table data by field";"Сортировать данные таблицы по полю "
 "Next";"Следующие"
 "Prev";"Предыдущие"
