--- a/application/i18n/ru.csv
+++ b/application/i18n/ru.csv
@@ -57,3 +57,5 @@
 "Sort table data by field";"Сортировать данные таблицы по полю "
 "Next";"Следующие"
 "Prev";"Предыдущие"
+"in ascending order":"в прямом порядке"
+"in descending order":"в обратном порядке"
