--- a/trunk/application/i18n/ru_RU.csv
+++ b/trunk/application/i18n/ru_RU.csv
@@ -17,7 +17,7 @@
 "Title";"Заголовок"
 "Description";"Описание"
 "Type";"Тип"
-"Create new blog";"Создай новый блог"
+"Create new blog";"Создание нового блога"
 "Create blog";"Создание блога"
 "Blogs";"Блоги"
 "Blog";"Блог"
@@ -49,7 +49,7 @@
 "Log Out";"Выйти"
 "Go to homepage";"Перейти на сайт"
 "Edit blog";"Редактирование блога"
-"Changes for blog successfully saved";"Изменения информации блога успешно сохранено"
+"Changes for blog successfully saved";"Изменения информации блога успешно сохранены"
 "New blog successfully created";"Новый блог создан"
 "Error editing blog";"Ошибка при удалении блога"
 "Blog deleted successfully";"Блог удалён"
