--- a/trunk/application/i18n/ru_ru.po
+++ b/trunk/application/i18n/ru_ru.po
@@ -1,16 +1,16 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Application\n"
+"Project-Id-Version: Test\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-09-29 09:20+0200\n"
+"POT-Creation-Date: 2009-09-29 09:00+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Denysenko Dmytro <naposhtu@gmail.com>\n"
-"Language-Team: Team <team@example.com>\n"
+"Language-Team:  <test@ex.ua>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Language: Russian\n"
-"X-Poedit-Country: UKRAINE\n"
+"X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-Basepath: .\n"
 "X-Poedit-SearchPath-0: D:/Workspace/Projects/ZF/Docroot/public_html/application\n"
 
