--- a/application/i18n/ru_RU.csv
+++ b/application/i18n/ru_RU.csv
@@ -1,103 +1,123 @@
-"Control panel";"Панель управления"
-"Dashboard";"Рабочая панель"
-"Welcome!";"Добро пожаловать!"
-"Orders";"Заказы"
-"Wrong login or password";"Неверный логин или пароль"
-"Wrong email or password";"Неверный электронный адрес или пароль"
-"You are already logged.";"Вы уже авторизованны."
-"Remember me";"Запомнить меня"
-"Login";"Логин"
-"E-mail";"Электронный адрес"
-"Password";"Пароль"
-"Enter";"Войти"
-"Login page";"Вход в систему"
-"Save";"Сохранить"
-"Personal blog";"Персональный блог"
-"Collaborative blog (community)";"Коллективный блог (сообщество)"
-"Title";"Заголовок"
-"Description";"Описание"
-"Type";"Тип"
-"Create new blog";"Создание нового блога"
-"Create blog";"Создание блога"
-"Blogs";"Блоги"
-"Blog";"Блог"
-"Manage blogs";"Управление блогами"
-"Value is required and can't be empty";"Значение не должно быть пустым"
-"English";"Английский"
-"Russian";"Русский"
-"Admin blogs";"Уравление блогами"
-"Created";"Создано"
-"Edit";"Редактировать"
-"Delete";"Удалить"
-"Actions";"Действия"
-"Fancy url";"Псевдоним для URL-адреса"
-"No blogs here";"Не заведено ещё ни одного блога"
-"available";"доступно"
-"unavailable";"недоступно"
-"Operating system";"Операционная система"
-"Zend Framework version";"Версия Zend Framework"
-"Database adapter";"Адаптер базы данных"
-"Database server version";"Версия сервера базы данных"
-"Safe mode";"Безопасный режим"
-"Free disk space";"Свободно на диске"
-"Disable functions";"Отключенные функции PHP"
-"Image adapter component";"Работа и изображениями"
-"Version";"версия"
-"Memory limit";"Ограничение ОЗУ"
-"Welcome";"Привет"
-"Settings";"Настройки"
-"Log Out";"Выйти"
-"Go to homepage";"Перейти на сайт"
-"Edit blog";"Редактирование блога"
-"Changes for blog successfully saved";"Изменения информации блога успешно сохранены"
-"New blog successfully created";"Новый блог создан"
-"Error editing blog";"Ошибка при удалении блога"
-"Blog deleted successfully";"Блог удалён"
-"Create, edit, delete posts. Manage communities.";"Создание, редактирование, удаление постов. Управление сообществами."
-"Sort table data by field";"Сортировать данные таблицы по полю "
-"Next";"Следующие"
-"Prev";"Предыдущие"
-"in ascending order":"в прямом порядке"
-"in descending order":"в обратном порядке"
-"off";"отключен"
+msgid "Control panel"
+msgstr "Панель управления"
+msgid "Dashboard"
+msgstr "Рабочая панель"
+msgid "Welcome!"
+msgstr "Добро пожаловать!"
+msgid "Orders"
+msgstr "Заказы"
+msgid "Wrong login or password"
+msgstr "Неверный логин или пароль"
+msgid "Wrong email or password"
+msgstr "Неверный электронный адрес или пароль"
+msgid "You are already logged."
+msgstr "Вы уже авторизованы."
+msgid "Remember me"
+msgstr "Запомнить меня"
+msgid "Login"
+msgstr "Логин"
+msgid "E-mail"
+msgstr "Электронный адрес"
+msgid "Password"
+msgstr "Пароль"
+msgid "Enter"
+msgstr "Войти"
+msgid "Login page"
+msgstr "Вход в систему"
+msgid "Save"
+msgstr "Сохранить"
+msgid "Personal blog"
+msgstr "Персональный блог"
+msgid "Collaborative blog (community)"
+msgstr "Коллективный блог (сообщество)"
+msgid "Title"
+msgstr "Заголовок"
+msgid "Description"
+msgstr "Описание"
+msgid "Type"
+msgstr "Тип"
+msgid "Create new blog"
+msgstr "Создание нового блога"
+msgid "Create blog"
+msgstr "Создание блога"
+msgid "Blogs"
+msgstr "Блоги"
+msgid "Blog"
+msgstr "Блог"
+msgid "Manage blogs"
+msgstr "Управление блогами"
+msgid "Value is required and can't be empty"
+msgstr "Значение не должно быть пустым"
+msgid "English"
+msgstr "Английский"
+msgid "Russian"
+msgstr "Русский"
+msgid "Admin blogs"
+msgstr "Уравление блогами"
+msgid "Created"
+msgstr "Создано"
+msgid "Edit"
+msgstr "Редактировать"
+msgid "Delete"
+msgstr "Удалить"
+msgid "Actions"
+msgstr "Действия"
+msgid "Fancy url"
+msgstr "Псевдоним для URL-адреса"
+msgid "No blogs here"
+msgstr "Не заведено ещё ни одного блога"
+msgid "available"
+msgstr "доступно"
+msgid "unavailable"
+msgstr "недоступно"
+msgid "Operating system"
+msgstr "Операционная система"
+msgid "Zend Framework version"
+msgstr "Версия Zend Framework"
+msgid "Database adapter"
+msgstr "Адаптер базы данных"
+msgid "Database server version"
+msgstr "Версия сервера базы данных"
+msgid "Safe mode"
+msgstr "Безопасный режим"
+msgid "Free disk space"
+msgstr "Свободно на диске"
+msgid "Disable functions"
+msgstr "Отключенные функции PHP"
+msgid "Image adapter component"
+msgstr "Работа и изображениями"
+msgid "Version"
+msgstr "версия"
+msgid "Memory limit"
+msgstr "Ограничение ОЗУ"
+msgid "Welcome"
+msgstr "Привет"
+msgid "Settings"
+msgstr "Настройки"
+msgid "Log Out"
+msgstr "Выйти"
+msgid "Go to homepage"
+msgstr "Перейти на сайт"
+msgid "Edit blog"
+msgstr "Редактирование блога"
+msgid "Changes for blog successfully saved"
+msgstr "Изменения информации блога успешно сохранены"
+msgid "New blog successfully created"
+msgstr "Новый блог создан"
+msgid "Error editing blog"
+msgstr "Ошибка при удалении блога"
+msgid "Blog deleted successfully"
+msgstr "Блог удалён"
+msgid "Create, edit, delete posts. Manage communities."
+msgstr "Создание, редактирование, удаление постов. Управление сообществами."
+msgid "Sort table data by field"
+msgstr "Сортировать данные таблицы по полю "
+msgid "Next"
+msgstr "Следующие"
+msgid "Prev"
+msgstr "Предыдущие"
+msgid "in ascending order":"в прямом порядке"
+msgid "in descending order":"в обратном порядке"
+msgid "off"
+msgstr "отключен"
 
-notAlnum;Введенное значение "%value%" неправильное. Разрешены только латинские символы и цифры
-stringEmpty;Поле не может быть пустым. Заполните его, пожалуйста
-notAlpha;Введите в это поле только латинские символы
-invalid;"%value% неправильный EAN-13 штрих-код
-invalidLength;Неправильное значение "%value%". Введите 13 символов
-notBetween;"%value%" не находится между "%min%" и "%max%", включительно
-notBetweenStrict;"%value%" не находится строго между "%min%" и "%max%"
-ccnumLength;"%value%" должно быть численным значением от 13 до 19 цифр длинной
-ccnumChecksum;Подсчёт контрольной суммы неудался. Значение "%value%" неверно
-dateNotYYYY-MM-DD;"%value%" не подходит под формат год-месяц-день(напр. 2008-11-03)
-dateInvalid;"%value%" - неверная дата
-dateFalseFormat;"%value%" - не подходит по формату
-notDigits;Значение "%value%" неправильное. Введите только цифры
-emailAddressInvalid;"%value%" неправильный адрес електронной почты. Введите его в формате имя@домен
-emailAddressInvalidHostname;"%hostname%" неверный домен для адреса "%value%"
-emailAddressInvalidMxRecord;Домен "%hostname%" не имеет MX-записи об адресе "%value%"
-emailAddressDotAtom;"%localPart%" не соответствует формату dot-atom
-emailAddressQuotedString;"%localPart%" не соответствует формату указанной строки
-emailAddressInvalidLocalPart;"%localPart%" не правильное имя для адреса "%value%", вводите адрес вида имя@домен
-notFloat;"%value%" не является дробным числом
-notGreaterThan;"%value%" не превышает "%min%"
-notHex;"%value%" содержит в себе не только шестнадцатеричные символы
-hostnameIpAddressNotAllowed;"%value%" - это IP-адрес, но IP-адреса не разрешены 
-hostnameUnknownTld;"%value%" - это DNS имя хоста, но оно не дожно быть из TLD-списка
-hostnameDashCharacter;"%value%" - это DNS имя хоста, но знак "-" находится в неправильном месте
-hostnameInvalidHostnameSchema;"%value%" - это DNS имя хоста, но оно не соответствует TLD для TLD "%tld%"
-hostnameUndecipherableTld;"%value%" - это DNS имя хоста. Не удаётся извлечь TLD часть
-hostnameInvalidHostname;"%value%" - не соответствует ожидаемой структуре для DNS имени хоста
-hostnameInvalidLocalName;"%value%" - адрес является недопустимым локальным сетевым адресом
-hostnameLocalNameNotAllowed;"%value%" - адрес является сетевым расположением, но локальные сетевые адреса не разрешены
-notSame;Значения не совпадают
-missingToken;Не было введено значения для проверки на идентичность
-notInArray;"%value%" не найдено в перечисленных допустимых значениях
-notInt;"%value%" не является целочисленным значением
-notIpAddress;"%value%" не является правильным IP-адресом
-notLessThan;"%value%" не меньше, чем "%max%"
-isEmpty;Введённое значение пустое, заполните поле, пожалуйста
-regexNotMatch;Значение "%value%" не подходит под шаблон регулярного выражения "%pattern%"
-stringLengthTooShort;Длина введённого значения "%value%", меньше чем %min% симв.
-stringLengthTooLong;Длина введённого значения "%value%", больше чем %max% симв.
